syntax = "proto3";
package types;

//////////////////////////////////////////////////////////////////////////////
// message for Privacy start/////////////////////////////////////////////////////
//////////////////////////////////////////////////////////////////////////////
message PrivacyAction {
    oneof value {
        Public2Privacy  public2privacy  = 1;
        Privacy2Privacy privacy2privacy = 2;
        Privacy2Public  privacy2public  = 3;
    }
    int32 ty = 4;
}

message Public2Privacy {
    string        tokenname = 1;
    int64         amount    = 2;
    string        note      = 5;
    PrivacyOutput output    = 7;
}

message Privacy2Privacy {
    string        tokenname = 1;
    int64         amount    = 2;
    string        note      = 5;
    PrivacyInput  input     = 6;
    PrivacyOutput output    = 7;
}

message Privacy2Public {
    string        tokenname = 1;
    int64         amount    = 2;
    string        note      = 3;
    PrivacyInput  input     = 4;
    PrivacyOutput output    = 5;
}

message UTXOGlobalIndex {
    //	int64 height   = 1;
    //	int32 txindex  = 2;
    bytes txhash   = 3;
    int32 outindex = 4;
}

// privacy input
message KeyInput {
    int64    amount                          = 1;
    repeated UTXOGlobalIndex utxoGlobalIndex = 2;
    bytes                    keyImage        = 3;
}

message PrivacyInput {
    repeated KeyInput keyinput = 1;
}

// privacy output
message keyOutput {
    int64 amount        = 1;
    bytes onetimepubkey = 2;
}

message PrivacyOutput {
    bytes    RpubKeytx           = 1;
    repeated keyOutput keyoutput = 2;
}

message GroupUTXOGlobalIndex {
    int64    amount                          = 1;
    repeated UTXOGlobalIndex utxoGlobalIndex = 2;
}

message LocalUTXOItem {
    int64 height        = 1;
    int32 txindex       = 2;
    int32 outindex      = 3;
    bytes txhash        = 4;
    bytes onetimepubkey = 5;
}

message ReqUTXOPubKeys {
    string   tokenName                                 = 1;
    repeated GroupUTXOGlobalIndex groupUTXOGlobalIndex = 2;
}

// 一个公钥信息
message PublicKeyData {
    repeated bytes data = 1;
}

message GroupUTXOPubKey {
    int64 amount = 1;
    // 输出签名的所有公钥
    repeated bytes pubkey = 2;
}

message ResUTXOPubKeys {
    repeated GroupUTXOPubKey groupUTXOPubKeys = 1;
}

message ReqPrivacyToken {
    string token  = 1;
    int64  amount = 2;
}

message AmountDetail {
    int64 amount = 1;
    int64 count  = 2;
}

message ReplyPrivacyAmounts {
    repeated AmountDetail amountDetail = 1;
}

message replyUTXOsOfAmount {
    repeated LocalUTXOItem localUTXOItems = 1;
}

message ReceiptPrivacyOutput {
    string   token               = 1;
    repeated keyOutput keyoutput = 2;
}
//各种amount额度的UTXO在链上的数量
message AmountsOfUTXO {
    map<int64, int64> amountMap = 1;
}

message TokenNamesOfUTXO {
    map<string, string> tokensMap = 1;
}

// 用以转换成json后继续可见的结构
message UTXOGlobalIndex4Print {
    string txhash   = 1;
    int32  outindex = 2;
}

message KeyInput4Print {
    int64    amount                                = 1;
    repeated UTXOGlobalIndex4Print utxoGlobalIndex = 2;
    string                         keyImage        = 3;
}

message keyOutput4Print {
    int64  amount        = 1;
    string onetimepubkey = 2;
}

message PrivacyInput4Print {
    repeated KeyInput4Print keyinput = 1;
}

message PrivacyOutput4Print {
    string   RpubKeytx                 = 1;
    repeated keyOutput4Print keyoutput = 2;
}

message Public2Privacy4Print {
    string              tokenname = 1;
    int64               amount    = 2;
    string              note      = 5;
    PrivacyOutput4Print output    = 7;
}

message Privacy2Privacy4Print {
    string              tokenname = 1;
    int64               amount    = 2;
    string              note      = 5;
    PrivacyInput4Print  input     = 6;
    PrivacyOutput4Print output    = 7;
}

message Privacy2Public4Print {
    string              tokenname = 1;
    int64               amount    = 2;
    string              note      = 3;
    PrivacyInput4Print  input     = 4;
    PrivacyOutput4Print output    = 5;
}

message PrivacyAction4Print {
    oneof value {
        Public2Privacy4Print  public2privacy  = 1;
        Privacy2Privacy4Print privacy2privacy = 2;
        Privacy2Public4Print  privacy2public  = 3;
    }
    int32 ty = 4;
}
